--- a/OtherHTML/GoW(2005)/Sass/GoW2005.scss
+++ b/OtherHTML/GoW(2005)/Sass/GoW2005.scss
@@ -1,13 +1,17 @@
+@font-face{
+    font-family: 'GodOfWar';
+    src: url('../../../fonts/GODOFWAR.ttf');
+}
+
 body,
 html {
     margin: 0;
     padding: 0;
-    // width: 100%;
 }
 
 body {
     @media only screen and (min-width: 768px) {
-        background: url("/Images/GoW2005.jpg") no-repeat center center fixed;
+        background: url("../../../Images/GoW2005.jpg") no-repeat center center fixed;
         -khtml-background-size: cover;
         -moz-background-size: cover;
         -ms-background-size: cover;
@@ -16,13 +20,12 @@ body {
         background-size: cover;
     }
     @media only screen and (max-width: 769px) {
-        background: url("/Images/God_of_War_III_BG\ mobile.jpg") no-repeat center center fixed;
+        background: url("../../../Images/God_of_War_III_BG\ mobile.jpg") no-repeat center center fixed;
         background-size: 100% 100%;
     }
     font-family: 'Times New Roman', Times, serif;
     color: whitesmoke;
     max-width: 100%;
-    // margin: auto;
     font-size: 18px;
 }
 
@@ -32,6 +35,7 @@ p {
 }
 
 h3 {
+    font-family: GodOfWar;
     @media only screen and (min-width: 768px) {
         width: 90%;
         font-size: 200%;
@@ -40,6 +44,7 @@ h3 {
 }
 
 .navMenu {
+    font-family: GodOfWar;
     padding: 0;
     margin: 0;
     top: 0;
