--- a/OtherHTML/GoW_Ascension/Sass/GoW_Ascension.css
+++ b/OtherHTML/GoW_Ascension/Sass/GoW_Ascension.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "GodOfWar";
-  src: url("/fonts/GODOFWAR.ttf");
+  src: url("../../../fonts/GODOFWAR.ttf");
 }
 body,
 html {
@@ -16,7 +16,7 @@ body {
 }
 @media only screen and (min-width: 768px) {
   body {
-    background: url("/Images/God_of_War-_Ascension1.jpg") no-repeat center center fixed;
+    background: url("../../../Images/God_of_War-_Ascension1.jpg") no-repeat center center fixed;
     -khtml-background-size: cover;
     -ms-background-size: cover;
     background-size: cover;
@@ -24,7 +24,7 @@ body {
 }
 @media only screen and (max-width: 769px) {
   body {
-    background: url("/Images/god-of-war-ascension-4k-13.jpg") no-repeat center center fixed;
+    background: url("../../../Images/god-of-war-ascension-4k-13.jpg") no-repeat center center fixed;
     background-color: #000000;
     background-size: 300% 100%;
   }
@@ -37,6 +37,7 @@ p {
 
 h3 {
   font-family: GodOfWar;
+  font-family: GodOfWar;
 }
 @media only screen and (min-width: 768px) {
   h3 {
@@ -47,6 +48,7 @@ h3 {
 }
 
 .navMenu {
+  font-family: GodOfWar;
   padding: 0;
   margin: 0;
   top: 0;
