--- a/OtherHTML/GoW_Betrayal/Sass/GoW_Betrayal.scss
+++ b/OtherHTML/GoW_Betrayal/Sass/GoW_Betrayal.scss
@@ -1,3 +1,8 @@
+@font-face{
+    font-family: 'GodOfWar';
+    src: url('../../../fonts/GODOFWAR.ttf');
+}
+
 body,
 html {
     margin: 0;
@@ -6,7 +11,7 @@ html {
 
 body {
     @media only screen and (min-width: 768px) {
-        background: url("/Images/DbNOsPMX0AIbvIG.jpg") no-repeat center center fixed;
+        background: url("../../../Images/DbNOsPMX0AIbvIG.jpg") no-repeat center center fixed;
         -khtml-background-size: cover;
         -moz-background-size: cover;
         -ms-background-size: cover;
@@ -15,7 +20,7 @@ body {
         background-size: cover;
     }
     @media only screen and (max-width: 769px) {
-        background: url("/Images/God_of_War_-_Betrayal.webp") no-repeat center 250px fixed;
+        background: url("../../../Images/God_of_War_-_Betrayal.webp") no-repeat center 250px fixed;
         background-color: #000000;
         background-size: 100% auto;
     }
@@ -31,6 +36,7 @@ p {
 }
 
 h3 {
+    font-family: GodOfWar;
     @media only screen and (min-width: 768px) {
         width: 90%;
         font-size: 200%;
@@ -39,6 +45,7 @@ h3 {
 }
 
 .navMenu {
+    font-family: GodOfWar;
     padding: 0;
     margin: 0;
     top: 0;
