--- a/OtherHTML/GoW_II/Sass/GoW_II.scss
+++ b/OtherHTML/GoW_II/Sass/GoW_II.scss
@@ -1,3 +1,8 @@
+@font-face{
+    font-family: 'GodOfWar';
+    src: url('../../../fonts/GODOFWAR.ttf');
+}
+
 body,
 html {
     margin: 0;
@@ -6,7 +11,7 @@ html {
 
 body {
     @media only screen and (min-width: 768px) {
-        background: url("/Images/thumbbig-82742.webp") no-repeat center center fixed;
+        background: url("../../../Images/thumbbig-82742.webp") no-repeat center center fixed;
         -khtml-background-size: cover;
         -moz-background-size: cover;
         -ms-background-size: cover;
@@ -15,7 +20,7 @@ body {
         background-size: cover;
     }
     @media only screen and (max-width: 769px) {
-        background: url("/Images/image.jpg") no-repeat center center fixed;
+        background: url("../../../Images/image.jpg") no-repeat center center fixed;
         background-size: 100% 100%;
     }
     font-family: 'Times New Roman', Times, serif;
@@ -30,6 +35,7 @@ p {
 }
 
 h3 {
+    font-family: GodOfWar;
     @media only screen and (min-width: 768px) {
         width: 90%;
         font-size: 200%;
@@ -38,6 +44,7 @@ h3 {
 }
 
 .navMenu {
+    font-family: GodOfWar;
     padding: 0;
     margin: 0;
     top: 0;
