--- a/OtherHTML/GoW_III/Sass/GoW_III.css
+++ b/OtherHTML/GoW_III/Sass/GoW_III.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: "GodOfWar";
+  src: url("../../../fonts/GODOFWAR.ttf");
+}
 body,
 html {
   margin: 0;
@@ -13,7 +17,7 @@ body {
 }
 @media only screen and (min-width: 768px) {
   body {
-    background: url("/Images/God of War3BG.jpg") no-repeat center center fixed;
+    background: url("../../../Images/God of War3BG.jpg") no-repeat center center fixed;
     -khtml-background-size: cover;
     -ms-background-size: cover;
     background-size: cover;
@@ -21,7 +25,7 @@ body {
 }
 @media only screen and (max-width: 769px) {
   body {
-    background: url("/Images/God_of_War_III_BG mobile.jpg") no-repeat center center fixed;
+    background: url("../../../Images/God_of_War_III_BG mobile.jpg") no-repeat center center fixed;
     background-size: 100% 100%;
   }
 }
@@ -31,6 +35,9 @@ p {
   padding: 0;
 }
 
+h3 {
+  font-family: GodOfWar;
+}
 @media only screen and (min-width: 768px) {
   h3 {
     width: 90%;
@@ -40,6 +47,7 @@ p {
 }
 
 .navMenu {
+  font-family: GodOfWar;
   padding: 0;
   margin: 0;
   top: 0;
