--- a/OtherHTML/GoW_III/Sass/GoW_III.scss
+++ b/OtherHTML/GoW_III/Sass/GoW_III.scss
@@ -1,3 +1,8 @@
+@font-face{
+    font-family: 'GodOfWar';
+    src: url('../../../fonts/GODOFWAR.ttf');
+}
+
 body,
 html {
     margin: 0;
@@ -7,7 +12,7 @@ html {
 
 body {
     @media only screen and (min-width: 768px) {
-        background: url("/Images/God\ of\ War3BG.jpg") no-repeat center center fixed;
+        background: url("../../../Images/God\ of\ War3BG.jpg") no-repeat center center fixed;
         -khtml-background-size: cover;
         -moz-background-size: cover;
         -ms-background-size: cover;
@@ -16,7 +21,7 @@ body {
         background-size: cover;
     }
     @media only screen and (max-width: 769px) {
-        background: url("/Images/God_of_War_III_BG\ mobile.jpg") no-repeat center center fixed;
+        background: url("../../../Images/God_of_War_III_BG\ mobile.jpg") no-repeat center center fixed;
         background-size: 100% 100%;
     }
     font-family: 'Times New Roman', Times, serif;
@@ -31,6 +36,7 @@ p {
 }
 
 h3 {
+    font-family: GodOfWar;
     @media only screen and (min-width: 768px) {
         width: 90%;
         font-size: 200%;
@@ -39,6 +45,7 @@ h3 {
 }
 
 .navMenu {
+    font-family: GodOfWar;
     padding: 0;
     margin: 0;
     top: 0;
@@ -64,11 +71,11 @@ h3 {
         width: 100%;
         padding-top: 70px;
     }
-
+    
     @media only screen and (min-width: 768px) {
         width: 66%;
     }
-
+    
 }
 
 .nav>a>p,
