--- a/OtherHTML/GoW_Ragnarök/Sass/GoW_Ragnarök.css
+++ b/OtherHTML/GoW_Ragnarök/Sass/GoW_Ragnarök.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: "GodOfWar";
+  src: url("../../../fonts/GODOFWAR.ttf");
+}
 body,
 html {
   margin: 0;
@@ -12,7 +16,7 @@ body {
 }
 @media only screen and (min-width: 768px) {
   body {
-    background: url("/Images/1209131.jpg") no-repeat center center fixed;
+    background: url("../../../Images/1209131.jpg") no-repeat center center fixed;
     -khtml-background-size: cover;
     -ms-background-size: cover;
     background-size: cover;
@@ -20,7 +24,7 @@ body {
 }
 @media only screen and (max-width: 769px) {
   body {
-    background: url("/Images/9781506733494-1658716557072.jpg") no-repeat center center fixed;
+    background: url("../../../Images/9781506733494-1658716557072.jpg") no-repeat center center fixed;
     background-size: 110% 100%;
   }
 }
@@ -30,6 +34,9 @@ p {
   padding: 0;
 }
 
+h3 {
+  font-family: GodOfWar;
+}
 @media only screen and (min-width: 768px) {
   h3 {
     width: 90%;
@@ -39,6 +46,7 @@ p {
 }
 
 .navMenu {
+  font-family: GodOfWar;
   padding: 0;
   margin: 0;
   top: 0;
