--- a/Sass/index.css
+++ b/Sass/index.css
@@ -16,21 +16,22 @@ body {
   font-family: "Times New Roman", Times, serif;
   color: whitesmoke;
   max-width: 100%;
+  min-height: 100%;
   font-size: 18px;
 }
 
-body > div > p {
+.GameSeriesLabel {
   font-family: GodOfWar;
   position: absolute;
   z-index: 10;
 }
 @media only screen and (max-width: 1201px) {
-  body > div > p {
+  .GameSeriesLabel {
     margin-top: 2%;
   }
 }
 @media only screen and (min-width: 1200px) {
-  body > div > p {
+  .GameSeriesLabel {
     margin-top: 3%;
   }
 }
@@ -87,17 +88,9 @@ body > div > p {
     width: 66%;
   }
 }
-
-.nav > a > p {
-  font-family: GodOfWar;
-  font-size: 80%;
-  display: table-cell;
-  vertical-align: middle;
-  color: whitesmoke;
-  text-indent: 0px;
-}
-
-.nav > a {
+.nav a {
+  width: 100%;
+  height: 100%;
   text-decoration: none;
   display: table;
   border: 1px solid rgb(6, 31, 119);
@@ -106,8 +99,23 @@ body > div > p {
   text-align: center;
   margin: 0 0 auto 0;
   background-color: rgb(76, 74, 210);
-  width: 100%;
-  height: 100%;
+}
+.nav a p {
+  font-family: GodOfWar;
+  display: table-cell;
+  vertical-align: middle;
+  color: whitesmoke;
+  text-indent: 0px;
+}
+@media only screen and (max-width: 769px) {
+  .nav a p {
+    font-size: 50%;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .nav a p {
+    font-size: 70%;
+  }
 }
 
 .shadowGradient {
@@ -134,9 +142,8 @@ body > div > p {
   display: inline-block;
   width: 35%;
 }
-
-.Games > a,
-.Games > a > p {
+.Games a,
+.Games a > p {
   font-family: GodOfWar;
   font-size: 85%;
   background-repeat: no-repeat;
@@ -145,11 +152,10 @@ body > div > p {
   color: whitesmoke;
   line-height: 50px;
   width: 100%;
-  height: 50.25px;
+  height: 50px;
   border-collapse: collapse;
 }
-
-.Games > p:hover {
+.Games p:hover {
   cursor: pointer;
 }
 
@@ -169,18 +175,15 @@ body > div > p {
   padding: 0;
   margin: 0;
 }
-
-.GameSeriaesMobile > h3 {
+.GameSeriaesMobile h3 {
   color: whitesmoke;
   text-indent: 10px;
   margin-bottom: 5px;
 }
-
-.GameSeriaesMobile > a {
+.GameSeriaesMobile a {
   width: 100%;
 }
-
-.GameSeriaesMobile > a > img {
+.GameSeriaesMobile a > img {
   width: 100%;
   margin-top: -4px;
   margin-bottom: -1px;
@@ -237,9 +240,8 @@ body > div > p {
     height: 70px;
   }
 }
-
 @media only screen and (min-width: 768px) {
-  .logo > img {
+  .logo img {
     height: 45px;
   }
 }
@@ -264,7 +266,10 @@ h3 {
   overflow: auto;
 }
 
-table, tr, td, th {
+table,
+tr,
+td,
+th {
   border: 1px solid whitesmoke;
   border-collapse: collapse;
   padding: 5px;
