--- a/OtherHTML/GoW(2018)/Sass/GoW2018.css
+++ b/OtherHTML/GoW(2018)/Sass/GoW2018.css
@@ -12,6 +12,7 @@ body {
   font-family: "Times New Roman", Times, serif;
   color: whitesmoke;
   max-width: 100%;
+  min-height: 100%;
   font-size: 18px;
 }
 @media only screen and (min-width: 768px) {
@@ -26,7 +27,7 @@ body {
   body {
     background: url("../../../Images/EGS_GodofWar_SantaMonicaStudio_S2_1200x1600-fbdf3cbc2980749091d52751ffabb7b7_1200x1600-fbdf3cbc2980749091d52751ffabb7b7.jpg") no-repeat center center fixed;
     background-color: #000000;
-    background-size: 100% 100%;
+    background-size: 120% 100%;
   }
 }
 
@@ -83,16 +84,54 @@ h3 {
     width: 66%;
   }
 }
-
-.nav > a > p,
-#showToggleMenu > a > p {
+.nav > a {
+  text-decoration: none;
+  display: table;
+  border: 1px solid rgb(38, 40, 156);
+  cursor: pointer;
+  text-indent: 0px;
+  text-align: center;
+  background-color: rgb(106, 148, 204);
+  width: 100%;
+  height: 100%;
+}
+.nav > a:hover {
+  background: rgb(38, 40, 156);
+}
+.nav > a > p {
+  padding: 0;
+  margin: 0;
   display: table-cell;
   vertical-align: middle;
   color: whitesmoke;
   text-indent: 0px;
 }
+@media only screen and (max-width: 769px) {
+  .nav > a > p {
+    font-size: 50%;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .nav > a > p {
+    font-size: 70%;
+  }
+}
 
-.nav > a,
+#showToggleMenu {
+  width: 20%;
+  display: inline-block;
+  padding: 0;
+  margin: 0;
+}
+#showToggleMenu:hover {
+  width: 100%;
+}
+@media only screen and (min-width: 768px) {
+  #showToggleMenu:hover .toggleList {
+    height: 240px;
+    border: 1px solid rgb(38, 40, 156);
+  }
+}
 #showToggleMenu > a {
   text-decoration: none;
   display: table;
@@ -100,10 +139,30 @@ h3 {
   cursor: pointer;
   text-indent: 0px;
   text-align: center;
-  margin: 0 0 auto 0;
   background-color: rgb(106, 148, 204);
   width: 100%;
   height: 100%;
+}
+#showToggleMenu > a:hover {
+  background: rgb(38, 40, 156);
+}
+#showToggleMenu > a > p {
+  padding: 0;
+  margin: 0;
+  display: table-cell;
+  vertical-align: middle;
+  color: whitesmoke;
+  text-indent: 0px;
+}
+@media only screen and (max-width: 769px) {
+  #showToggleMenu > a > p {
+    font-size: 50%;
+  }
+}
+@media only screen and (min-width: 768px) {
+  #showToggleMenu > a > p {
+    font-size: 70%;
+  }
 }
 
 .toggleList {
@@ -119,28 +178,18 @@ h3 {
   overflow: hidden;
   transition: height 1s;
 }
-
+.toggleList > li {
+  width: 100%;
+  border-top: 1px solid rgb(38, 40, 156);
+}
 .toggleList > li:hover {
   background: rgb(38, 40, 156);
 }
-
 .toggleList > li > a {
   width: 100%;
   height: 100%;
   text-decoration: none;
   color: whitesmoke;
-}
-
-.toggleList > li {
-  width: 100%;
-  border-top: 1px solid rgb(38, 40, 156);
-}
-
-#showToggleMenu {
-  width: 100%;
-  display: inline-block;
-  padding: 0;
-  margin: 0;
 }
 
 .toggleMenu {
@@ -149,13 +198,6 @@ h3 {
   margin: 0;
   width: 100%;
   transition: height 1s;
-}
-
-@media only screen and (min-width: 768px) {
-  #showToggleMenu:hover .toggleList {
-    height: 265px;
-    border: 1px solid rgb(38, 40, 156);
-  }
 }
 
 .logo {
@@ -179,7 +221,6 @@ h3 {
     height: 70px;
   }
 }
-
 @media only screen and (min-width: 768px) {
   .logo > img {
     height: 45px;
@@ -205,13 +246,13 @@ h3 {
 @media only screen and (min-width: 768px) {
   .BladesOfChaos {
     top: -8px;
-    width: 10%;
+    width: 8%;
   }
 }
 @media only screen and (max-width: 769px) {
   .BladesOfChaos {
     top: 75px;
-    width: 20%;
+    width: 15%;
   }
 }
 
@@ -224,6 +265,12 @@ h3 {
   right: 5%;
   width: 90%;
 }
+.mainContent > div {
+  margin: auto;
+  padding: 1% 0 1% 0;
+  width: 95%;
+  height: 120%;
+}
 
 .mainContent > div {
   margin: auto;
@@ -232,15 +279,13 @@ h3 {
   height: 120%;
 }
 
-.Characters_Weapons > div > div {
-  width: 100%;
-}
-
 .Characters_Weapons > div {
   display: flex;
   padding: 5px 0;
 }
-
+.Characters_Weapons > div > div {
+  width: 100%;
+}
 .Characters_Weapons > div > div > img {
   padding: 1% 0 0 0;
   opacity: 110%;
@@ -256,10 +301,9 @@ h3 {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    widht: 80%;
+    width: 80%;
   }
 }
-
 @media only screen and (min-width: 768px) {
   .Characters_Weapons > div > div > p,
   .Characters_Weapons > div > div > ul,
@@ -283,19 +327,16 @@ h3 {
   width: 100%;
   height: 100%;
 }
-
-.Enemies > figure > p {
-  text-indent: 0;
-  text-align: center;
-}
-
-.Enemies > figure {
+.Enemies figure {
   width: 15%;
   float: left;
   padding-right: auto;
 }
-
-.Enemies > figure > img {
+.Enemies figure p {
+  text-indent: 0;
+  text-align: center;
+}
+.Enemies figure img {
   display: block;
   width: 100%;
   margin-left: auto;
@@ -309,19 +350,16 @@ h3 {
   width: 100%;
   height: 100%;
 }
-
-.Bosses > figure > p {
-  text-indent: 0;
-  text-align: center;
-}
-
-.Bosses > figure {
+.Bosses figure {
   width: 15%;
   float: left;
   padding-right: auto;
 }
-
-.Bosses > figure > img {
+.Bosses figure p {
+  text-indent: 0;
+  text-align: center;
+}
+.Bosses figure img {
   display: block;
   width: 100%;
   margin-left: auto;
