--- a/OtherHTML/GoW(2018)/Sass/GoW2018.scss
+++ b/OtherHTML/GoW(2018)/Sass/GoW2018.scss
@@ -1,6 +1,40 @@
-@font-face{
+@font-face {
     font-family: 'GodOfWar';
     src: url('../../../fonts/GODOFWAR.ttf');
+}
+
+@mixin w_h_100 {
+    width: 100%;
+    height: 100%;
+}
+
+@mixin apStyle {
+    @media only screen and (max-width: 769px) {
+        font-size: 50%;
+    }
+
+    @media only screen and (min-width: 768px) {
+        font-size: 70%;
+    }
+
+    padding: 0;
+    margin: 0;
+    display: table-cell;
+    vertical-align: middle;
+    color: whitesmoke;
+    text-indent: 0px;
+}
+
+@mixin aStyle {
+    text-decoration: none;
+    display: table;
+    border: 1px solid rgb(38, 40, 156);
+    cursor: pointer;
+    text-indent: 0px;
+    text-align: center;
+    background-color: rgb(106, 148, 204);
+    width: 100%;
+    height: 100%;
 }
 
 body,
@@ -19,14 +53,19 @@ body {
         -webkit-background-size: cover;
         background-size: cover;
     }
+
     @media only screen and (max-width: 769px) {
         background: url("../../../Images/EGS_GodofWar_SantaMonicaStudio_S2_1200x1600-fbdf3cbc2980749091d52751ffabb7b7_1200x1600-fbdf3cbc2980749091d52751ffabb7b7.jpg") no-repeat center center fixed;
         background-color: #000000;
-        background-size: 100% 100%;
+        background-size: 120% 100%;
     }
-    font-family: 'Times New Roman', Times, serif;
+
+    font-family: 'Times New Roman',
+    Times,
+    serif;
     color: whitesmoke;
     max-width: 100%;
+    min-height: 100%;
     font-size: 18px;
 }
 
@@ -37,6 +76,7 @@ p {
 
 h3 {
     font-family: GodOfWar;
+
     @media only screen and (min-width: 768px) {
         width: 90%;
         font-size: 200%;
@@ -57,6 +97,7 @@ h3 {
     width: 100%;
     height: 45px;
     position: fixed;
+
     @media only screen and (min-width: 768px) {
         justify-content: right;
     }
@@ -67,6 +108,7 @@ h3 {
     justify-content: right;
     height: 45px;
     position: fixed;
+
     @media only screen and (max-width: 769px) {
         width: 100%;
         padding-top: 70px;
@@ -76,28 +118,43 @@ h3 {
         width: 66%;
     }
 
+    >a {
+        @include aStyle();
+        &:hover {
+            background: rgb(38, 40, 156);
+        }
+        >p {
+            @include apStyle();
+        }
+    }
 }
 
-.nav>a>p,
-#showToggleMenu>a>p {
-    display: table-cell;
-    vertical-align: middle;
-    color: whitesmoke;
-    text-indent: 0px;
-}
+#showToggleMenu {
+    width: 20%;
+    display: inline-block;
+    padding: 0;
+    margin: 0;
 
-.nav>a,
-#showToggleMenu>a {
-    text-decoration: none;
-    display: table;
-    border: 1px solid rgb(38, 40, 156);
-    cursor: pointer; 
-    text-indent: 0px;
-    text-align: center;
-    margin: 0 0 auto 0;
-    background-color: rgb(106, 148, 204);
-    width: 100%;
-    height: 100%;
+    &:hover {
+        width: 100%;
+
+        @media only screen and (min-width: 768px) {
+            .toggleList {
+                height: 240px;
+                border: 1px solid rgb(38, 40, 156);
+            }
+        }
+    }
+
+    >a {
+        @include aStyle();
+        &:hover {
+            background: rgb(38, 40, 156);
+        }
+        >p {
+            @include apStyle();
+        }
+    }
 }
 
 .toggleList {
@@ -112,29 +169,22 @@ h3 {
     height: 0;
     overflow: hidden;
     transition: height 1s;
-}
 
-.toggleList>li:hover {
-    background: rgb(38, 40, 156);
-}
+    >li {
+        width: 100%;
+        border-top: 1px solid rgb(38, 40, 156);
+        &:hover {
+            background: rgb(38, 40, 156);
+    
+        }
 
-.toggleList>li>a {
-    width: 100%;
-    height: 100%;
-    text-decoration: none;
-    color: whitesmoke;
-}
-
-.toggleList>li {
-    width: 100%;
-    border-top: 1px solid rgb(38, 40, 156);
-}
-
-#showToggleMenu {
-    width: 100%;
-    display: inline-block;
-    padding: 0;
-    margin: 0;
+        >a {
+            width: 100%;
+            height: 100%;
+            text-decoration: none;
+            color: whitesmoke;
+        }
+    }
 }
 
 .toggleMenu {
@@ -143,27 +193,20 @@ h3 {
     margin: 0;
     width: 100%;
     transition: height 1s;
-
 }
 
-#showToggleMenu:hover {
-    @media only screen and (min-width: 768px) {
-        .toggleList {
-            height: 265px;
-            border: 1px solid rgb(38, 40, 156);
-        }
-    }
-}
 
 .logo {
     position: relative;
     z-index: 1;
+
     @media only screen and (min-width: 768px) {
         left: 0px;
         top: 0;
         padding-top: 0;
         margin: 0 auto 0 0;
     }
+
     @media only screen and (max-width: 769px) {
         display: block;
         background-color: #000000;
@@ -171,10 +214,11 @@ h3 {
         text-align: center;
         height: 70px;
     }
-}
-.logo > img{
-    @media only screen and (min-width: 768px) {
-        height: 45px;
+
+    >img {
+        @media only screen and (min-width: 768px) {
+            height: 45px;
+        }
     }
 }
 
@@ -190,13 +234,15 @@ h3 {
 
 .BladesOfChaos {
     @media only screen and (min-width: 768px) {
-        top:-8px;
-        width: 10%;
+        top: -8px;
+        width: 8%;
     }
+
     @media only screen and (max-width: 769px) {
         top: 75px;
-        width: 20%;
+        width: 15%;
     }
+
     position: absolute;
     right: 0;
     z-index: 0;
@@ -211,6 +257,13 @@ h3 {
     left: 5%;
     right: 5%;
     width: 90%;
+
+    >div {
+        margin: auto;
+        padding: 1% 0 1% 0;
+        width: 95%;
+        height: 120%;
+    }
 }
 
 .mainContent>div {
@@ -219,39 +272,47 @@ h3 {
     width: 95%;
     height: 120%;
 }
-.Characters_Weapons>div>div {
-    width: 100%;
-}
-.Characters_Weapons>div {
-    display: flex;
-    padding: 5px 0;
-}
 
-.Characters_Weapons>div>div>img {
-    @media only screen and (min-width: 768px) {
-        float: left;
-        width: 10%;
-    }
-    @media only screen and (max-width: 900px) {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        widht: 80%
-    }
-    padding: 1% 0 0 0;
-    opacity: 110%;
-}
+.Characters_Weapons {
+    >div {
+        display: flex;
+        padding: 5px 0;
 
-.Characters_Weapons>div>div>p,
-.Characters_Weapons>div>div>ul,
-.Characters_Weapons>div>div>h3 {
-    @media only screen and (min-width: 768px) {
-        padding-left: 15%;
-    }
-    @media only screen and (max-width: 900px) {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
+        >div {
+            width: 100%;
+
+            >img {
+                @media only screen and (min-width: 768px) {
+                    float: left;
+                    width: 10%;
+                }
+
+                @media only screen and (max-width: 900px) {
+                    display: block;
+                    margin-left: auto;
+                    margin-right: auto;
+                    width: 80%
+                }
+
+                padding: 1% 0 0 0;
+                opacity: 110%;
+            }
+
+            >p,
+            >ul,
+            >h3 {
+                @media only screen and (min-width: 768px) {
+                    padding-left: 15%;
+                }
+
+                @media only screen and (max-width: 900px) {
+                    display: block;
+                    margin-left: auto;
+                    margin-right: auto;
+                }
+
+            }
+        }
     }
 }
 
@@ -260,25 +321,25 @@ h3 {
     padding-left: 3%;
     width: 100%;
     height: 100%;
-}
 
-.Enemies>figure>p {
-    text-indent: 0;
-    text-align: center;
-}
+    figure {
+        width: 15%;
+        float: left;
+        padding-right: auto;
 
-.Enemies>figure {
-    width: 15%;
-    float: left;
-    padding-right: auto;
-}
+        p {
+            text-indent: 0;
+            text-align: center;
+        }
 
-.Enemies>figure>img {
-    display: block;
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    transform: scale(1);
+        img {
+            display: block;
+            width: 100%;
+            margin-left: auto;
+            margin-right: auto;
+            transform: scale(1);
+        }
+    }
 }
 
 .Bosses {
@@ -286,23 +347,23 @@ h3 {
     padding-left: 3%;
     width: 100%;
     height: 100%;
-}
 
-.Bosses>figure>p {
-    text-indent: 0;
-    text-align: center;
-}
+    figure {
+        width: 15%;
+        float: left;
+        padding-right: auto;
 
-.Bosses>figure {
-    width: 15%;
-    float: left;
-    padding-right: auto;
-}
+        p {
+            text-indent: 0;
+            text-align: center;
+        }
 
-.Bosses>figure>img {
-    display: block;
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    transform: scale(1);
+        img {
+            display: block;
+            width: 100%;
+            margin-left: auto;
+            margin-right: auto;
+            transform: scale(1);
+        }
+    }
 }
