--- a/Sass/index.css
+++ b/Sass/index.css
@@ -6,18 +6,17 @@ body,
 html {
   margin: 0;
   padding: 0;
-  max-width: 100%;
-  height: 120%;
-  min-height: 120%;
 }
 
 body {
   background: url("../Images/god-of-war-ragnarok-bg.jpg") no-repeat center center fixed;
-  -khtml-background-size: cover;
-  -ms-background-size: cover;
-  background-size: 100% 100%;
+  -khtml-background-size: 100% 120%;
+  -ms-background-size: 100% 120%;
+  background-size: 100% 120%;
   font-family: "Times New Roman", Times, serif;
   color: whitesmoke;
+  max-width: 100%;
+  min-height: 100%;
   font-size: 18px;
 }
 
@@ -101,6 +100,9 @@ body {
   margin: 0 0 auto 0;
   background-color: rgb(76, 74, 210);
 }
+.nav a:hover {
+  background: rgb(38, 40, 156);
+}
 .nav a p {
   font-family: GodOfWar;
   display: table-cell;
@@ -134,6 +136,7 @@ body {
 
 .upperGradient,
 .lowerGradient {
+  display: none;
   position: relative;
   z-index: -1;
   width: 100%;
@@ -161,14 +164,14 @@ body {
 }
 
 .GameSeriaesConteiner {
-  display: flex;
+  display: none;
   background-color: aqua;
   width: 100%;
   height: 470px;
 }
 
 .GameSeriaesMobile {
-  display: block;
+  display: none;
   position: relative;
   top: 120px;
   height: 150px;
