--- a/OtherHTML/GoW(2005)/Sass/GoW2005.css
+++ b/OtherHTML/GoW(2005)/Sass/GoW2005.css
@@ -1,13 +1,3 @@
-@font-face {
-  font-family: "GodOfWar";
-  src: url("../../../fonts/GODOFWAR.ttf");
-}
-body,
-html {
-  margin: 0;
-  padding: 0;
-}
-
 body {
   font-family: "Times New Roman", Times, serif;
   color: whitesmoke;
@@ -25,103 +15,11 @@ body {
 }
 @media only screen and (max-width: 769px) {
   body {
-    background: url("../../../Images/God_of_War_III_BG mobile.jpg") no-repeat center center fixed;
+    background: url("../../../Images/MV5BZTE1NDJhN2UtOTMxYy00MWU1LTkyYTItNzFkOTEwNWVlOTFlXkEyXkFqcGdeQXVyMTA0MTM5NjI2._V1_.jpg") no-repeat center center fixed;
     background-size: 100% 100%;
   }
 }
 
-p {
-  text-indent: 20px;
-  padding: 0;
-}
-
-h3 {
-  font-family: GodOfWar;
-}
-@media only screen and (min-width: 768px) {
-  h3 {
-    width: 90%;
-    font-size: 200%;
-    margin: 10px auto 2% auto;
-  }
-}
-
-.navMenu {
-  font-family: GodOfWar;
-  padding: 0;
-  margin: 0;
-  top: 0;
-  box-sizing: content-box;
-  left: 0;
-  position: relative;
-  display: flex;
-  z-index: 1000;
-  width: 100%;
-  height: 45px;
-  position: fixed;
-}
-@media only screen and (min-width: 768px) {
-  .navMenu {
-    justify-content: right;
-  }
-}
-
-.nav {
-  display: inline-flex;
-  justify-content: right;
-  height: 45px;
-  position: fixed;
-}
-@media only screen and (max-width: 769px) {
-  .nav {
-    width: 100%;
-    padding-top: 70px;
-  }
-}
-@media only screen and (min-width: 768px) {
-  .nav {
-    width: 66%;
-  }
-}
-.nav > a {
-  text-decoration: none;
-  display: table;
-  border: 1px solid rgb(173, 70, 38);
-  cursor: pointer;
-  text-indent: 0px;
-  text-align: center;
-  background-color: rgb(211, 100, 11);
-  width: 100%;
-  height: 100%;
-}
-.nav > a:hover {
-  background: rgb(173, 70, 38);
-}
-.nav > a > p {
-  padding: 0;
-  margin: 0;
-  display: table-cell;
-  vertical-align: middle;
-  color: whitesmoke;
-  text-indent: 0px;
-}
-@media only screen and (max-width: 769px) {
-  .nav > a > p {
-    font-size: 50%;
-  }
-}
-@media only screen and (min-width: 768px) {
-  .nav > a > p {
-    font-size: 70%;
-  }
-}
-
-#showToggleMenu {
-  width: 20%;
-  display: inline-block;
-  padding: 0;
-  margin: 0;
-}
 #showToggleMenu:hover {
   width: 100%;
 }
@@ -130,238 +28,4 @@ h3 {
     height: 335px;
     border: 1px solid rgb(173, 70, 38);
   }
-}
-#showToggleMenu > a {
-  text-decoration: none;
-  display: table;
-  border: 1px solid rgb(173, 70, 38);
-  cursor: pointer;
-  text-indent: 0px;
-  text-align: center;
-  background-color: rgb(211, 100, 11);
-  width: 100%;
-  height: 100%;
-}
-#showToggleMenu > a:hover {
-  background: rgb(173, 70, 38);
-}
-#showToggleMenu > a > p {
-  padding: 0;
-  margin: 0;
-  display: table-cell;
-  vertical-align: middle;
-  color: whitesmoke;
-  text-indent: 0px;
-}
-@media only screen and (max-width: 769px) {
-  #showToggleMenu > a > p {
-    font-size: 50%;
-  }
-}
-@media only screen and (min-width: 768px) {
-  #showToggleMenu > a > p {
-    font-size: 70%;
-  }
-}
-
-.toggleList {
-  display: inline-block;
-  width: 100%;
-  list-style: none;
-  background-color: black;
-  opacity: 90%;
-  margin: 0;
-  padding: 0;
-  text-align: center;
-  height: 0;
-  overflow: hidden;
-  transition: height 1s;
-}
-.toggleList > li {
-  width: 100%;
-  border-top: 1px solid rgb(173, 70, 38);
-}
-.toggleList > li:hover {
-  background: rgb(173, 70, 38);
-}
-.toggleList > li > a {
-  width: 100%;
-  height: 100%;
-  text-decoration: none;
-  color: whitesmoke;
-}
-
-.toggleMenu {
-  display: inline-flex;
-  padding: 0px;
-  margin: 0;
-  width: 100%;
-  transition: height 1s;
-}
-
-.logo {
-  position: relative;
-  z-index: 1;
-}
-@media only screen and (min-width: 768px) {
-  .logo {
-    left: 0px;
-    top: 0;
-    padding-top: 0;
-    margin: 0 auto 0 0;
-  }
-}
-@media only screen and (max-width: 769px) {
-  .logo {
-    display: block;
-    background-color: #000000;
-    width: 100%;
-    text-align: center;
-    height: 70px;
-  }
-}
-@media only screen and (min-width: 768px) {
-  .logo > img {
-    height: 45px;
-  }
-}
-
-.Axe {
-  display: flex;
-  position: fixed;
-  z-index: 0;
-  width: 100px;
-  left: 68px;
-  top: -250px;
-  transform: rotateX(180deg) rotate(-14deg);
-}
-
-.BladesOfChaos {
-  position: absolute;
-  right: 0;
-  z-index: 0;
-  transform: scale(1);
-}
-@media only screen and (min-width: 768px) {
-  .BladesOfChaos {
-    top: -8px;
-    width: 10%;
-  }
-}
-@media only screen and (max-width: 769px) {
-  .BladesOfChaos {
-    top: 75px;
-    width: 20%;
-  }
-}
-
-.mainContent {
-  background-color: rgba(0, 0, 0, 0.9);
-  color: whitesmoke;
-  position: relative;
-  top: 750px;
-  left: 5%;
-  right: 5%;
-  width: 90%;
-}
-.mainContent > div {
-  margin: auto;
-  padding: 1% 0 1% 0;
-  width: 95%;
-  height: 120%;
-}
-
-.mainContent > div {
-  margin: auto;
-  padding: 1% 0 1% 0;
-  width: 95%;
-  height: 120%;
-}
-
-.Characters_Weapons > div {
-  display: flex;
-  padding: 5px 0;
-}
-.Characters_Weapons > div > div {
-  width: 100%;
-}
-.Characters_Weapons > div > div > img {
-  padding: 1% 0 0 0;
-  opacity: 110%;
-}
-@media only screen and (min-width: 768px) {
-  .Characters_Weapons > div > div > img {
-    float: left;
-    width: 10%;
-  }
-}
-@media only screen and (max-width: 900px) {
-  .Characters_Weapons > div > div > img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 80%;
-  }
-}
-@media only screen and (min-width: 768px) {
-  .Characters_Weapons > div > div > p,
-  .Characters_Weapons > div > div > ul,
-  .Characters_Weapons > div > div > h3 {
-    padding-left: 15%;
-  }
-}
-@media only screen and (max-width: 900px) {
-  .Characters_Weapons > div > div > p,
-  .Characters_Weapons > div > div > ul,
-  .Characters_Weapons > div > div > h3 {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
-
-.Enemies {
-  display: inline-block;
-  padding-left: 3%;
-  width: 100%;
-  height: 100%;
-}
-.Enemies figure {
-  width: 15%;
-  float: left;
-  padding-right: auto;
-}
-.Enemies figure p {
-  text-indent: 0;
-  text-align: center;
-}
-.Enemies figure img {
-  display: block;
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  transform: scale(1);
-}
-
-.Bosses {
-  display: inline-block;
-  padding-left: 3%;
-  width: 100%;
-  height: 100%;
-}
-.Bosses figure {
-  width: 15%;
-  float: left;
-  padding-right: auto;
-}
-.Bosses figure p {
-  text-indent: 0;
-  text-align: center;
-}
-.Bosses figure img {
-  display: block;
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  transform: scale(1);
 }/*# sourceMappingURL=GoW2005.css.map */
